style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Comfortaa', cursive;
}

html {
    overflow-x: hidden !important;
    scroll-snap-type: y proximity;
    scroll-padding-top: 45px;
}

body{
    margin: 0;
    padding: 0;
    overflow-x: hidden !important;
    width: 100% !important;
}

section {
    scroll-snap-align: start;
}

:root {
    --gradient: linear-gradient(
        45deg, #879af2, #d3208b, #fda000);


    --secondary: linear-gradient(
        135deg, #274b74, #8233c5, #e963fd);
}

nav {
    display: flex;
    position: sticky;
    top: 0px;
    width: 100%;
    z-index: 1;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding: 0.75% 2.75%;
    white-space: nowrap;
    height: 45px !important;
    background-image: var(--gradient);
    background-size: 300%;
    opacity: 0.8;
    animation: bg-animation 5s infinite alternate;
}

nav a{
    font-size: 1.5rem;
    border-radius: 10px;
    background-color: rgba(255, 255, 255, 0.65);
    transition: font-size 0.5s ease-in-out;
    box-shadow:  -5px -5px 40px #ffffffb2,
    5px 5px 40px rgba(94, 104, 121, 0.945);
    padding: 0.25% 0.8%;
    text-decoration: none;
    color: black;
}

nav a:hover{
    font-size: 1.6rem;
    box-shadow:  box-shadow -6px -6px 35px #ffffffb2,
    6px 6px 35px rgba(94, 104, 121, 0.945);
}
z

#link {
    font-size: 1.25rem;
    font-weight: 525;
    text-decoration: none;
    transition: font-size 0.5s ease-in-out;
    border-radius: 8.5px;
    background-color: rgba(255, 255, 255, 0.65);
    color: black;
    box-shadow:  -5px -5px 40px #ffffffb2,
    5px 5px 40px rgba(94, 104, 121, 0.945);
    padding: 0.5% 2%;
    text-decoration: none;
    color: black;

}

#link:hover {
    font-size: 1.375rem;
    box-shadow:  -6px -6px 35px #ffffffb2,
    6px 6px 35px rgba(94, 104, 121, 0.945);
}

#sectionone {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    color: white;
    background-image: var(--gradient);
    background-size: 375%;
    padding: 10% 5% 10% 7%;
    gap: 5em;
    animation: bg-animation 5s infinite alternate;

}

@keyframes bg-animation {
    0%{
        background-position: left;
    }

    100% {
        background-position: right;
    }
} 

#introText {
    display: flex;
    margin-bottom: 5em;
    flex-direction: column;
    text-align: start;
    gap: 15px;
    opacity: 0.785;
}

#introText h1 {
    font-size: 4.5rem;
    animation: revealText 1.5s ease-out;
}

#introText h3 {
    font-size: 2.25rem;
    animation: revealText 1s ease-out;
}
#introText p{
    padding: 5% 0%;
    font-size: 1.1em;
    animation: revealText 1.8s ease-out;
    line-height: 1.5em;
}
#sectionone img{
    height: 30em;
    border-radius: 25px;
    box-shadow: 0px 0px 70px 5px white;
    animation: revealImg 1.35s ease-out;
}



@keyframes revealText {
    0%{
        translate: -50%;
        opacity: 0.1;
    }

    100% {
        translate: 0 0;
        opacity: 1;
    }
} 

@keyframes revealImg {
    0%{
        translate: 50%;
        opacity: 0.1;
    }

    100% {
        translate: 0 0;
        opacity: 1;
    }
} 

.blinking-cursor {
    font-weight: 100;
    font-size: 5rem;
    color: white;
    opacity: 0.785;
    animation: 1.5s blink step-end infinite;
  }
  
  @keyframes blink {
    from, to {
      color: transparent;
    }
    50% {
      color: white;
    }
  }

  @media all and (max-width: 1000px) {
    nav {
        display: flex;
        position: sticky !important;
        top: 0px;
        width: 100%;
        z-index: 1;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        padding: 0.75% 2.75%;
        white-space: nowrap;
        height: 45px !important;
        background-image: var(--gradient);
        background-size: 300%;
        opacity: 0.8;
        animation: bg-animation 5s infinite alternate;
    }
    #sectionone img {
        height: 23.5em;
    }
    nav a {
        border-radius: 10px;
    }
    
    #introText {
    margin-bottom: 3.5em;
    }

    #introText h1 {
    font-size: 3rem;
    }

    #introText h3 {
    font-size: 2rem;
    }
    #introText p{
    padding: 5% 0%;
    font-size: 1em;
}
    .blinking-cursor {
        font-size: 3.35rem;
    }
  
}

@media all and (max-width: 700px) {
    nav {
        display: flex;
        position: sticky !important;
        top: 0px;
        width: 100%;
        z-index: 1;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
        padding: 0.75% 2.5%;
        white-space: nowrap;
        height: 45px !important;
        background-image: var(--gradient);
        background-size: 300%;
        opacity: 0.8;
        animation: bg-animation 5s infinite alternate;
    }
    #link {
        font-size: 1rem;
        font-weight: 525;
        text-decoration: none;
        transition: font-size 0.5s ease-in-out;
        border-radius: 8.5px;
        background-color: rgba(255, 255, 255, 0.65);
        color: black;
        box-shadow:  -5px -5px 40px #ffffffb2,
        5px 5px 40px rgba(94, 104, 121, 0.945);
        padding: 1% 2%;
    
    }
    #sectionone {
        align-items: center;
    }
    #sectionone img{
        display: none;
    }
    
    nav a{
        font-size: 1.2rem;
        padding: 1% 0.8%;
    }
    nav a:hover{
        font-size: 1.1rem;
    }
    #introText {
    margin-bottom: 3.5em;
    text-align: center;
    align-self: center;
    justify-content: center;
    padding-right: 3.5%;
    }

    #introText h1 {
    padding-left: 7.5%;
    font-size: 3.2rem;
    }

    #introText h3 {
    font-size: 1.5rem;
    text-align: center;
    }
    #introText p{
    padding: 5% 0%;
    font-size: 1em;
}
.blinking-cursor {
    font-size: 3.35rem;
  }
  
}
/* ... */

